# shinobu-rs

./: Cargo.toml  Info.plist  build-bundle  build.rs
.github/workflows/: release.yaml
launcher/: Cargo.toml
launcher/src/: main.rs
shinobu/: Cargo.toml
shinobu/src/: main.rs  sys.rs  ui.rs
src/: data.rs  main.rs  monitor.rs  sys.rs  ui.rs
