[package]
name = "shinobu"
version = "0.1.0"
edition = "2021"
description = "Shinobu"

[package.metadata.bundle]
name = "Shinobu"
identifier = "org.dacci.shinobu"

[dependencies]
anyhow = "1.0.68"
cocoa = "0.24.1"
core-foundation = "0.9.3"
core-foundation-sys = "0.8.3"
env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
futures = { version = "0.3.25", default-features = false, features = ["std"] }
libc = "0.2.139"
log = "0.4.17"
objc = "0.2.7"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
